2008-09-11  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	    Change PID info of the O2 sensors
	

2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	    remove some messages regarding decode_dtc_code
	    

2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    only read supported freeze_frame_pids if we are connected
	

2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* garmon/sensor.py:
	* plugins/freeze_frame_data/freeze_frame_data.glade:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	* scripts/elm_sim.py:
	    Make the freeze Frame Data plugin actually do something
	    Put a Read button in the plugin
	    

2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	* plugins/dtc_reader/dtc_reader.py:
	* scripts/elm_sim.py:
	    fix decode_dtc_code and move it to sensor.py


2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	* garmon/obd_device.py:
	* garmon/sensor.py:
	* plugins/Makefile.am:
	* plugins/dtc_clearer/dtc_clearer.py:
	* plugins/freeze_frame_data/Makefile.am:
	* plugins/freeze_frame_data/freeze_frame_data.glade:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	* scripts/elm_sim.py:
	    First work on the Freeze Frame Data plugin
	    

2008-09-10  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.py:
	    fix _notify_units_cb to update all views
	    

2008-09-08  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	    Bump version to 0.2.0


2008-09-08  Ben Van Mechelen  <me@benvm.be>

	* TODO.tasks:
	* plugins/Makefile.am:
	* plugins/sensor_list/Makefile.am:
	* plugins/sensor_list/sensor_list.py:
	    Removed the sensor_list plugin


2008-09-05  Ben Van Mechelen  <me@benvm.be>

	* aclocal.m4:
	* data/garmon.schemas:
	    Added all present gconf keys to the schema file
	    

2008-09-05  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* plugins/dtc_clearer/dtc_clearer.py: